fixes spacing on smaller viewports

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -296,6 +296,8 @@ a:hover {
 @media (max-width: 804px) {
 	.post {
 		width: 90%;
+		margin-right: 0;
+		margin-left: 0;
 	}
 }
 
